@@ -1,16 +1,22 @@
 package com.gmoon.springjpapagination.users.user.application;
 
+import static com.gmoon.springjpapagination.users.user.domain.QUser.*;
 import static java.util.Arrays.*;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.querydsl.core.types.Predicate;
+
 import com.gmoon.springjpapagination.global.domain.UnionPageResizer;
 import com.gmoon.springjpapagination.global.domain.UnionPagination;
+import com.gmoon.springjpapagination.users.user.domain.User;
 import com.gmoon.springjpapagination.users.user.domain.UserGroupRepository;
 import com.gmoon.springjpapagination.users.user.domain.UserRepository;
 import com.gmoon.springjpapagination.users.user.dto.UserContentListVO;
@@ -49,6 +55,14 @@ public class UserService {
 		return listVO;
 	}
 
+	@Transactional(readOnly = true)
+	public Page<User> findAll(String groupId, String keyword, Pageable pageable) {
+		Predicate predicate = user.userGroup.id.eq(groupId)
+			 .and(user.likeName(keyword));
+
+		return userRepository.findAll(predicate, pageable);
+	}
+
 	private void setContent(UserContentListVO listVO, UnionPageResizer resizer) {
 		UserContentListVO.Search search = listVO.getSearch();
 
@@ -56,18 +70,20 @@ public class UserService {
 				  UserGroupListVO.class,
 				  pageable ->
 					   userGroupRepository.findAll(search.getGroupId(), search.getKeyword(), pageable)
-			 ).getContent()
+			 )
 			 .stream()
+			 .flatMap(Collection::stream)
 			 .map(UserContentVO::new)
-			 .collect(Collectors.toList());
+			 .toList();
 
 		List<UserContentVO> users = resizer.applyContent(
 				  UserListVO.class,
 				  pageable -> userRepository.findAll(search.getGroupId(), search.getKeyword(), pageable)
-			 ).getContent()
+			 )
 			 .stream()
+			 .flatMap(Collection::stream)
 			 .map(UserContentVO::new)
-			 .collect(Collectors.toList());
+			 .toList();
 
 		List<UserContentVO> content = new ArrayList<>(listVO.getPageSize());
 		content.addAll(groups);
